tests/fixtures/valid_programs/conditional.cryo
namespace Main;

import IO from <io/stdio>;

function main() -> int {
    const condition: boolean = true;
    
    // Simple if statement
    if (condition) {
        IO::println("Condition is true");
    }
    
    // If-else statement
    const x: int = 10;
    if (x > 5) {
        IO::println("x is greater than 5");
    } else {
        IO::println("x is not greater than 5");
    }
    
    // Nested if-else
    const y: int = 15;
    if (y > 10) {
        if (y > 20) {
            IO::println("y > 20");
        } else {
            IO::println("10 < y <= 20");
        }
    } else {
        IO::println("y <= 10");
    }
    
    // Ternary operator
    const max: int = x > y ? x : y;
    IO::println("Maximum value:");
    IO::print_int(max);
    
    return 0;
}