tests/fixtures/invalid_programs/scope_violation.cryo
namespace Main;

import IO from <io/stdio>;

function main() -> int {
    {
        const inner_var: int = 42;
    }
    // inner_var is out of scope here
    
    const x: int = inner_var;  // Should cause scope error
    
    return 0;
}